// Vitest Snapshot v1

exports[`Cascader > Cascader baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell t-cell--middle"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      地址
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      请选择地址
    </div>
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
    <div
      class="t-popup t-popup--bottom"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-cascader"
      >
        <div
          class="t-cascader__title"
        >
          
          选择地址
          
        </div>
        <div
          class="t-cascader__close-btn"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-cascader__content"
        >
          <div>
            <div
              class="t-cascader__steps"
            >
              
              <div
                class="t-cascader__step"
              >
                <div
                  class="t-cascader__step-dot t-cascader__step-dot--last"
                />
                <div
                  class="t-cascader__step-label t-cascader__step-label--active"
                >
                  选择选项
                </div>
                <svg
                  class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cascader__options-container"
            style="width: 200vw; transform: translateX(-000vw);"
          >
            
            <div
              class="t-cascader__options"
            >
              <div
                class="cascader-radio-group-0 slide-enter-from slide-enter-active"
              >
                <div
                  class="t-radio-group"
                  role="radiogroup"
                >
                  
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      name=""
                      type="radio"
                      value="110000"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <div
                        class="placeholder"
                      />
                      <!---->
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style=""
                      >
                        北京市
                      </span>
                      <!--v-if-->
                    </div>
                    <!--v-if-->
                  </div>
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      name=""
                      type="radio"
                      value="120000"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <div
                        class="placeholder"
                      />
                      <!---->
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style=""
                      >
                        天津市
                      </span>
                      <!--v-if-->
                    </div>
                    <!--v-if-->
                  </div>
                  
                  <!--v-if-->
                </div>
              </div>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  
</div>
`;

exports[`Cascader > Cascader keysVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell t-cell--middle"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      地址
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      请选择地址
    </div>
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
    <div
      class="t-popup t-popup--bottom"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-cascader"
      >
        <div
          class="t-cascader__title"
        >
          
          选择地址
          
        </div>
        <div
          class="t-cascader__close-btn"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-cascader__content"
        >
          <div>
            <div
              class="t-cascader__steps"
            >
              
              <div
                class="t-cascader__step"
              >
                <div
                  class="t-cascader__step-dot t-cascader__step-dot--last"
                />
                <div
                  class="t-cascader__step-label t-cascader__step-label--active"
                >
                  选择选项
                </div>
                <svg
                  class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cascader__options-container"
            style="width: 200vw; transform: translateX(-000vw);"
          >
            
            <div
              class="t-cascader__options"
            >
              <div
                class="cascader-radio-group-0 slide-enter-from slide-enter-active"
              >
                <div
                  class="t-radio-group"
                  role="radiogroup"
                >
                  
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      name=""
                      type="radio"
                      value="110000"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <div
                        class="placeholder"
                      />
                      <!---->
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style=""
                      >
                        北京市
                      </span>
                      <!--v-if-->
                    </div>
                    <!--v-if-->
                  </div>
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      name=""
                      type="radio"
                      value="120000"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <div
                        class="placeholder"
                      />
                      <!---->
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style=""
                      >
                        天津市
                      </span>
                      <!--v-if-->
                    </div>
                    <!--v-if-->
                  </div>
                  
                  <!--v-if-->
                </div>
              </div>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  
</div>
`;

exports[`Cascader > Cascader lazyVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell t-cell--middle"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      地址
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      请选择地址
    </div>
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
    <div
      class="t-popup t-popup--bottom"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-cascader"
      >
        <div
          class="t-cascader__title"
        >
          
          选择地址
          
        </div>
        <div
          class="t-cascader__close-btn"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-cascader__content"
        >
          <div>
            <div
              class="t-cascader__steps"
            >
              
              <div
                class="t-cascader__step"
              >
                <div
                  class="t-cascader__step-dot t-cascader__step-dot--last"
                />
                <div
                  class="t-cascader__step-label t-cascader__step-label--active"
                >
                  选择选项
                </div>
                <svg
                  class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cascader__options-container"
            style="width: 200vw; transform: translateX(-000vw);"
          >
            
            <div
              class="t-cascader__options"
            >
              <div
                class="cascader-radio-group-0 slide-enter-from slide-enter-active"
              >
                <div
                  class="t-radio-group"
                  role="radiogroup"
                >
                  
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      name=""
                      type="radio"
                      value="440300"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <div
                        class="placeholder"
                      />
                      <!---->
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style=""
                      >
                        深圳市
                      </span>
                      <!--v-if-->
                    </div>
                    <!--v-if-->
                  </div>
                  
                  <!--v-if-->
                </div>
              </div>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  
</div>
`;

exports[`Cascader > Cascader mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Cascader 级联选择器
  </h1>
  <p
    class="summary"
  >
    用于多层级数据选择，主要为树形结构，可展示更多的数据
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 基础
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基本用法
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell t-cell--middle"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          地址
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          请选择地址
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
        <div
          class="t-popup t-popup--bottom"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-cascader"
          >
            <div
              class="t-cascader__title"
            >
              
              选择地址
              
            </div>
            <div
              class="t-cascader__close-btn"
            >
              <svg
                class="t-icon t-icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-cascader__content"
            >
              <div>
                <div
                  class="t-cascader__steps"
                >
                  
                  <div
                    class="t-cascader__step"
                  >
                    <div
                      class="t-cascader__step-dot t-cascader__step-dot--last"
                    />
                    <div
                      class="t-cascader__step-label t-cascader__step-label--active"
                    >
                      选择选项
                    </div>
                    <svg
                      class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </div>
                  
                </div>
                <!--v-if-->
              </div>
              <!--v-if-->
              <div
                class="t-cascader__options-container"
                style="width: 200vw; transform: translateX(-000vw);"
              >
                
                <div
                  class="t-cascader__options"
                >
                  <div
                    class="cascader-radio-group-0 slide-enter-from slide-enter-active"
                  >
                    <div
                      class="t-radio-group"
                      role="radiogroup"
                    >
                      
                      <div
                        class="t-radio t-radio--left t-radio--block"
                      >
                        <input
                          class="t-radio__original"
                          name=""
                          type="radio"
                          value="110000"
                        />
                        <div
                          class="t-radio__icon t-radio__icon--left"
                        >
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <div
                            class="placeholder"
                          />
                          <!---->
                        </div>
                        <div
                          class="t-radio__content"
                        >
                          <span
                            class="t-radio__title"
                            style=""
                          >
                            北京市
                          </span>
                          <!--v-if-->
                        </div>
                        <!--v-if-->
                      </div>
                      <div
                        class="t-radio t-radio--left t-radio--block"
                      >
                        <input
                          class="t-radio__original"
                          name=""
                          type="radio"
                          value="120000"
                        />
                        <div
                          class="t-radio__icon t-radio__icon--left"
                        >
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <div
                            class="placeholder"
                          />
                          <!---->
                        </div>
                        <div
                          class="t-radio__content"
                        >
                          <span
                            class="t-radio__title"
                            style=""
                          >
                            天津市
                          </span>
                          <!--v-if-->
                        </div>
                        <!--v-if-->
                      </div>
                      
                      <!--v-if-->
                    </div>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        选项卡风格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell t-cell--middle"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          地址
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          请选择地址
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
        <div
          class="t-popup t-popup--bottom"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-cascader"
          >
            <div
              class="t-cascader__title"
            >
              
              选择地址
              
            </div>
            <div
              class="t-cascader__close-btn"
            >
              <svg
                class="t-icon t-icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-cascader__content"
            >
              <div>
                <!--v-if-->
                <!--v-if-->
              </div>
              <!--v-if-->
              <div
                class="t-cascader__options-container"
                style="width: 200vw; transform: translateX(-000vw);"
              >
                
                <div
                  class="t-cascader__options"
                >
                  <div
                    class="cascader-radio-group-0 slide-enter-from slide-enter-active"
                  >
                    <div
                      class="t-radio-group"
                      role="radiogroup"
                    >
                      
                      <div
                        class="t-radio t-radio--left t-radio--block"
                      >
                        <input
                          class="t-radio__original"
                          name=""
                          type="radio"
                          value="110000"
                        />
                        <div
                          class="t-radio__icon t-radio__icon--left"
                        >
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <div
                            class="placeholder"
                          />
                          <!---->
                        </div>
                        <div
                          class="t-radio__content"
                        >
                          <span
                            class="t-radio__title"
                            style=""
                          >
                            北京市
                          </span>
                          <!--v-if-->
                        </div>
                        <!--v-if-->
                      </div>
                      <div
                        class="t-radio t-radio--left t-radio--block"
                      >
                        <input
                          class="t-radio__original"
                          name=""
                          type="radio"
                          value="120000"
                        />
                        <div
                          class="t-radio__icon t-radio__icon--left"
                        >
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <div
                            class="placeholder"
                          />
                          <!---->
                        </div>
                        <div
                          class="t-radio__content"
                        >
                          <span
                            class="t-radio__title"
                            style=""
                          >
                            天津市
                          </span>
                          <!--v-if-->
                        </div>
                        <!--v-if-->
                      </div>
                      
                      <!--v-if-->
                    </div>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 进阶
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        带初始值
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell t-cell--middle"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          地址
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          请选择地址
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
        <div
          class="t-popup t-popup--bottom"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-cascader"
          >
            <div
              class="t-cascader__title"
            >
              
              选择地址
              
            </div>
            <div
              class="t-cascader__close-btn"
            >
              <svg
                class="t-icon t-icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-cascader__content"
            >
              <div>
                <div
                  class="t-cascader__steps"
                >
                  
                  <div
                    class="t-cascader__step"
                  >
                    <div
                      class="t-cascader__step-dot t-cascader__step-dot--last"
                    />
                    <div
                      class="t-cascader__step-label t-cascader__step-label--active"
                    >
                      选择选项
                    </div>
                    <svg
                      class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </div>
                  
                </div>
                <!--v-if-->
              </div>
              <!--v-if-->
              <div
                class="t-cascader__options-container"
                style="width: 200vw; transform: translateX(-000vw);"
              >
                
                <div
                  class="t-cascader__options"
                >
                  <div
                    class="cascader-radio-group-0 slide-enter-from slide-enter-active"
                  >
                    <div
                      class="t-radio-group"
                      role="radiogroup"
                    >
                      
                      <div
                        class="t-radio t-radio--left t-radio--block"
                      >
                        <input
                          class="t-radio__original"
                          name=""
                          type="radio"
                          value="110000"
                        />
                        <div
                          class="t-radio__icon t-radio__icon--left"
                        >
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <div
                            class="placeholder"
                          />
                          <!---->
                        </div>
                        <div
                          class="t-radio__content"
                        >
                          <span
                            class="t-radio__title"
                            style=""
                          >
                            北京市
                          </span>
                          <!--v-if-->
                        </div>
                        <!--v-if-->
                      </div>
                      <div
                        class="t-radio t-radio--left t-radio--block"
                      >
                        <input
                          class="t-radio__original"
                          name=""
                          type="radio"
                          value="120000"
                        />
                        <div
                          class="t-radio__icon t-radio__icon--left"
                        >
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <div
                            class="placeholder"
                          />
                          <!---->
                        </div>
                        <div
                          class="t-radio__content"
                        >
                          <span
                            class="t-radio__title"
                            style=""
                          >
                            天津市
                          </span>
                          <!--v-if-->
                        </div>
                        <!--v-if-->
                      </div>
                      
                      <!--v-if-->
                    </div>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义 keys
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell t-cell--middle"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          地址
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          请选择地址
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
        <div
          class="t-popup t-popup--bottom"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-cascader"
          >
            <div
              class="t-cascader__title"
            >
              
              选择地址
              
            </div>
            <div
              class="t-cascader__close-btn"
            >
              <svg
                class="t-icon t-icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-cascader__content"
            >
              <div>
                <div
                  class="t-cascader__steps"
                >
                  
                  <div
                    class="t-cascader__step"
                  >
                    <div
                      class="t-cascader__step-dot t-cascader__step-dot--last"
                    />
                    <div
                      class="t-cascader__step-label t-cascader__step-label--active"
                    >
                      选择选项
                    </div>
                    <svg
                      class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </div>
                  
                </div>
                <!--v-if-->
              </div>
              <!--v-if-->
              <div
                class="t-cascader__options-container"
                style="width: 200vw; transform: translateX(-000vw);"
              >
                
                <div
                  class="t-cascader__options"
                >
                  <div
                    class="cascader-radio-group-0 slide-enter-from slide-enter-active"
                  >
                    <div
                      class="t-radio-group"
                      role="radiogroup"
                    >
                      
                      <div
                        class="t-radio t-radio--left t-radio--block"
                      >
                        <input
                          class="t-radio__original"
                          name=""
                          type="radio"
                          value="110000"
                        />
                        <div
                          class="t-radio__icon t-radio__icon--left"
                        >
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <div
                            class="placeholder"
                          />
                          <!---->
                        </div>
                        <div
                          class="t-radio__content"
                        >
                          <span
                            class="t-radio__title"
                            style=""
                          >
                            北京市
                          </span>
                          <!--v-if-->
                        </div>
                        <!--v-if-->
                      </div>
                      <div
                        class="t-radio t-radio--left t-radio--block"
                      >
                        <input
                          class="t-radio__original"
                          name=""
                          type="radio"
                          value="120000"
                        />
                        <div
                          class="t-radio__icon t-radio__icon--left"
                        >
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <div
                            class="placeholder"
                          />
                          <!---->
                        </div>
                        <div
                          class="t-radio__content"
                        >
                          <span
                            class="t-radio__title"
                            style=""
                          >
                            天津市
                          </span>
                          <!--v-if-->
                        </div>
                        <!--v-if-->
                      </div>
                      
                      <!--v-if-->
                    </div>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        使用次级标题
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell t-cell--middle"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          地址
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          请选择地址
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
        <div
          class="t-popup t-popup--bottom"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-cascader"
          >
            <div
              class="t-cascader__title"
            >
              
              选择地址
              
            </div>
            <div
              class="t-cascader__close-btn"
            >
              <svg
                class="t-icon t-icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-cascader__content"
            >
              <div>
                <div
                  class="t-cascader__steps"
                >
                  
                  <div
                    class="t-cascader__step"
                  >
                    <div
                      class="t-cascader__step-dot t-cascader__step-dot--last"
                    />
                    <div
                      class="t-cascader__step-label t-cascader__step-label--active"
                    >
                      选择选项
                    </div>
                    <svg
                      class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </div>
                  
                </div>
                <!--v-if-->
              </div>
              <div
                class="t-cascader__options-title"
              >
                请选择省份
              </div>
              <div
                class="t-cascader__options-container"
                style="width: 200vw; transform: translateX(-000vw);"
              >
                
                <div
                  class="t-cascader__options"
                >
                  <div
                    class="cascader-radio-group-0 slide-enter-from slide-enter-active"
                  >
                    <div
                      class="t-radio-group"
                      role="radiogroup"
                    >
                      
                      <div
                        class="t-radio t-radio--left t-radio--block"
                      >
                        <input
                          class="t-radio__original"
                          name=""
                          type="radio"
                          value="110000"
                        />
                        <div
                          class="t-radio__icon t-radio__icon--left"
                        >
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <div
                            class="placeholder"
                          />
                          <!---->
                        </div>
                        <div
                          class="t-radio__content"
                        >
                          <span
                            class="t-radio__title"
                            style=""
                          >
                            北京市
                          </span>
                          <!--v-if-->
                        </div>
                        <!--v-if-->
                      </div>
                      <div
                        class="t-radio t-radio--left t-radio--block"
                      >
                        <input
                          class="t-radio__original"
                          name=""
                          type="radio"
                          value="120000"
                        />
                        <div
                          class="t-radio__icon t-radio__icon--left"
                        >
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <div
                            class="placeholder"
                          />
                          <!---->
                        </div>
                        <div
                          class="t-radio__content"
                        >
                          <span
                            class="t-radio__title"
                            style=""
                          >
                            天津市
                          </span>
                          <!--v-if-->
                        </div>
                        <!--v-if-->
                      </div>
                      
                      <!--v-if-->
                    </div>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        异步加载
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell t-cell--middle"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          地址
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          请选择地址
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
      </div>
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
        <div
          class="t-popup t-popup--bottom"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-cascader"
          >
            <div
              class="t-cascader__title"
            >
              
              选择地址
              
            </div>
            <div
              class="t-cascader__close-btn"
            >
              <svg
                class="t-icon t-icon-close"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-cascader__content"
            >
              <div>
                <div
                  class="t-cascader__steps"
                >
                  
                  <div
                    class="t-cascader__step"
                  >
                    <div
                      class="t-cascader__step-dot t-cascader__step-dot--last"
                    />
                    <div
                      class="t-cascader__step-label t-cascader__step-label--active"
                    >
                      选择选项
                    </div>
                    <svg
                      class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </div>
                  
                </div>
                <!--v-if-->
              </div>
              <!--v-if-->
              <div
                class="t-cascader__options-container"
                style="width: 200vw; transform: translateX(-000vw);"
              >
                
                <div
                  class="t-cascader__options"
                >
                  <div
                    class="cascader-radio-group-0 slide-enter-from slide-enter-active"
                  >
                    <div
                      class="t-radio-group"
                      role="radiogroup"
                    >
                      
                      <div
                        class="t-radio t-radio--left t-radio--block"
                      >
                        <input
                          class="t-radio__original"
                          name=""
                          type="radio"
                          value="440300"
                        />
                        <div
                          class="t-radio__icon t-radio__icon--left"
                        >
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <!--v-if-->
                          <div
                            class="placeholder"
                          />
                          <!---->
                        </div>
                        <div
                          class="t-radio__content"
                        >
                          <span
                            class="t-radio__title"
                            style=""
                          >
                            深圳市
                          </span>
                          <!--v-if-->
                        </div>
                        <!--v-if-->
                      </div>
                      
                      <!--v-if-->
                    </div>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
          
        </div>
      </teleport-stub>
      
      
    </div>
  </div>
</div>
`;

exports[`Cascader > Cascader themeTabVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell t-cell--middle"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      地址
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      请选择地址
    </div>
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
    <div
      class="t-popup t-popup--bottom"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-cascader"
      >
        <div
          class="t-cascader__title"
        >
          
          选择地址
          
        </div>
        <div
          class="t-cascader__close-btn"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-cascader__content"
        >
          <div>
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cascader__options-container"
            style="width: 200vw; transform: translateX(-000vw);"
          >
            
            <div
              class="t-cascader__options"
            >
              <div
                class="cascader-radio-group-0 slide-enter-from slide-enter-active"
              >
                <div
                  class="t-radio-group"
                  role="radiogroup"
                >
                  
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      name=""
                      type="radio"
                      value="110000"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <div
                        class="placeholder"
                      />
                      <!---->
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style=""
                      >
                        北京市
                      </span>
                      <!--v-if-->
                    </div>
                    <!--v-if-->
                  </div>
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      name=""
                      type="radio"
                      value="120000"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <div
                        class="placeholder"
                      />
                      <!---->
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style=""
                      >
                        天津市
                      </span>
                      <!--v-if-->
                    </div>
                    <!--v-if-->
                  </div>
                  
                  <!--v-if-->
                </div>
              </div>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  
</div>
`;

exports[`Cascader > Cascader withTitleVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell t-cell--middle"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      地址
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      请选择地址
    </div>
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
    <div
      class="t-popup t-popup--bottom"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-cascader"
      >
        <div
          class="t-cascader__title"
        >
          
          选择地址
          
        </div>
        <div
          class="t-cascader__close-btn"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-cascader__content"
        >
          <div>
            <div
              class="t-cascader__steps"
            >
              
              <div
                class="t-cascader__step"
              >
                <div
                  class="t-cascader__step-dot t-cascader__step-dot--last"
                />
                <div
                  class="t-cascader__step-label t-cascader__step-label--active"
                >
                  选择选项
                </div>
                <svg
                  class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              
            </div>
            <!--v-if-->
          </div>
          <div
            class="t-cascader__options-title"
          >
            请选择省份
          </div>
          <div
            class="t-cascader__options-container"
            style="width: 200vw; transform: translateX(-000vw);"
          >
            
            <div
              class="t-cascader__options"
            >
              <div
                class="cascader-radio-group-0 slide-enter-from slide-enter-active"
              >
                <div
                  class="t-radio-group"
                  role="radiogroup"
                >
                  
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      name=""
                      type="radio"
                      value="110000"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <div
                        class="placeholder"
                      />
                      <!---->
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style=""
                      >
                        北京市
                      </span>
                      <!--v-if-->
                    </div>
                    <!--v-if-->
                  </div>
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      name=""
                      type="radio"
                      value="120000"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <div
                        class="placeholder"
                      />
                      <!---->
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style=""
                      >
                        天津市
                      </span>
                      <!--v-if-->
                    </div>
                    <!--v-if-->
                  </div>
                  
                  <!--v-if-->
                </div>
              </div>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  
</div>
`;

exports[`Cascader > Cascader withValueVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell t-cell--middle"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      地址
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      请选择地址
    </div>
    <div
      class="t-cell__right"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
  </div>
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
    <div
      class="t-popup t-popup--bottom"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-cascader"
      >
        <div
          class="t-cascader__title"
        >
          
          选择地址
          
        </div>
        <div
          class="t-cascader__close-btn"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-cascader__content"
        >
          <div>
            <div
              class="t-cascader__steps"
            >
              
              <div
                class="t-cascader__step"
              >
                <div
                  class="t-cascader__step-dot t-cascader__step-dot--last"
                />
                <div
                  class="t-cascader__step-label t-cascader__step-label--active"
                >
                  选择选项
                </div>
                <svg
                  class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cascader__options-container"
            style="width: 200vw; transform: translateX(-000vw);"
          >
            
            <div
              class="t-cascader__options"
            >
              <div
                class="cascader-radio-group-0 slide-enter-from slide-enter-active"
              >
                <div
                  class="t-radio-group"
                  role="radiogroup"
                >
                  
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      name=""
                      type="radio"
                      value="110000"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <div
                        class="placeholder"
                      />
                      <!---->
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style=""
                      >
                        北京市
                      </span>
                      <!--v-if-->
                    </div>
                    <!--v-if-->
                  </div>
                  <div
                    class="t-radio t-radio--left t-radio--block"
                  >
                    <input
                      class="t-radio__original"
                      name=""
                      type="radio"
                      value="120000"
                    />
                    <div
                      class="t-radio__icon t-radio__icon--left"
                    >
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <!--v-if-->
                      <div
                        class="placeholder"
                      />
                      <!---->
                    </div>
                    <div
                      class="t-radio__content"
                    >
                      <span
                        class="t-radio__title"
                        style=""
                      >
                        天津市
                      </span>
                      <!--v-if-->
                    </div>
                    <!--v-if-->
                  </div>
                  
                  <!--v-if-->
                </div>
              </div>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </teleport-stub>
  
</div>
`;
